http://bugs.osportfolio.org/jira/browse/OSP-1115 http://bugs.osportfolio.org/jira/browse/OSP-1139 http://bugs.osportfolio.org/jira/browse/OSP-1171 Added security for wizard page guidance Fixing up some of the UI to be more consistent. Style allows only one css to be chosen
git-svn-id: https://source.sakaiproject.org/svn/trunk/osp/osp-2.1@6190 66ffb92e-73f9-0310-93c1-f5514f145a0a